# bwi_will

./: .gitmodules  README.md
amcl_will/: CMakeLists.txt  package.xml
amcl_will/launch/: amcl.launch
amcl_will/src/: amcl_node.cpp
bwi_object_search/: 3ne.xcf  3ne_ai_common.pgm  3ne_ai_front.pgm  CMakeLists.txt  analyse_relation_data.py  object_list.txt  object_search.rviz  package.xml  relation_data.txt  relation_data_bak.txt  relation_data_combined.txt  relation_data_fixed.txt  relation_data_long_2.txt  relation_data_people.txt  relation_data_target.txt  relation_data_target_2.txt  segbot_v2.urdf.xacro
bwi_object_search/artags/: object_search_list.txt
bwi_object_search/calibration/: bender_laptop_camera.yaml
bwi_object_search/data/: make_object_list.py  object_list.txt
bwi_object_search/launch/: ar_pose_multi.launch  ar_pose_single.launch  object_search.launch
bwi_object_search/launch/includes/: segbot.launch.xml
bwi_object_search/src/: ar_object_transform.cpp  object_search.cpp  object_search_find.cpp  object_search_find_random.cpp
find_object_2d/.svn/: wc.db
find_object_2d/include_x/.svn/: wc.db
find_object_2d/src_x/.svn/: wc.db
